# ============================================================================
# OpenSWMM Python Bindings
# ============================================================================
#
# Build system: scikit-build (wraps setuptools + CMake) for compiling the
# Cython extension modules that bind to the C/C++ engine libraries.
#
# Building:
#   pip install .                     # standard install
#   pip install -e . --no-build-isolation  # editable (dev)
#   python -m build                   # sdist + wheel
#   DEBUG=1 pip install .             # debug build
#
# The CMake step automatically configures + builds the parent C/C++ project,
# then compiles the Cython .pyx files against the resulting shared libraries.
# ============================================================================

[build-system]
requires = [
    "setuptools >= 75.3.0",
    "wheel >= 0.45.1",
    "scikit-build >= 0.18.1",
    "cmake >= 3.27.0",
    "cython >= 3.0.12",
    "numpy >= 1.21.0",
]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project metadata  (PEP 621)
# ============================================================================
[project]
name = "openswmm"
version = "6.0.0.dev0"
description = "Python bindings for the OpenSWMM stormwater modelling engine."
requires-python = ">=3.9"
readme = { file = "README.md", content-type = "text/markdown" }

license = { file = "LICENSE" }

authors = [
    { name = "Caleb Buahin", email = "caleb.buahin@gmail.com" },
]
maintainers = [
    { name = "Caleb Buahin", email = "caleb.buahin@gmail.com" },
]

keywords = [
    "SWMM",
    "stormwater",
    "hydrology",
    "hydraulics",
    "water resources",
    "environmental engineering",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy >= 1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3",
    "cython >= 3.0.12",
    "build >= 1.2",
]

[project.urls]
Homepage    = "https://github.com/hydrocouple/openswmm.engine/python"
Repository  = "https://github.com/hydrocouple/openswmm.engine"
"Bug Tracker" = "https://github.com/hydrocouple/openswmm.engine/issues"
Changelog   = "https://github.com/hydrocouple/openswmm.engine/blob/main/CHANGELOG.md"

# ============================================================================
# scikit-build configuration
# ============================================================================
[tool.scikit-build]
cmake.minimum-version = "3.21"

# ============================================================================
# cibuildwheel
# ============================================================================
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = "*-musllinux_* *-win32 *-manylinux_i686"

# Shared test settings (run inside each Python environment after wheel install).
# CIBW sets {package} to the source package-dir (./python).
# --import-mode=importlib prevents the source tree from shadowing the installed wheel.
test-requires = ["pytest", "numpy"]
test-command  = "pytest {package}/tests/engine -v --import-mode=importlib --ignore={package}/tests/engine/test_integration.py"

[tool.cibuildwheel.linux]
before-all   = "yum install -y ninja-build || apt-get install -y ninja-build"
before-build = "pip install ninja"

[tool.cibuildwheel.macos]
# ninja + libomp run once per platform (before-all).
# delocate is installed per Python env (before-build) to bundle dylibs into the wheel.
before-all   = "brew install ninja libomp"
before-build = "pip install delocate"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
# Pass vcpkg root and any extra cmake args from the outer environment into each build venv.
# VCPKG_ROOT is needed by the toolchain file declared in python/CMakePresets.json.
# OPENSWMM_CMAKE_ARGS (read by setup.py) carries per-machine triplet / installed-dir hints.
environment = {VCPKG_ROOT = "$VCPKG_ROOT", OPENSWMM_CMAKE_ARGS = "$OPENSWMM_CMAKE_ARGS"}

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# ============================================================================
# pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
