# ============================================================================
# OpenSWMM Python Bindings
# ============================================================================
#
# Build backend: scikit-build-core (CMake + Cython integration).
#
#   pip install .                            # release install (clean wheel)
#   pip install -e . --no-build-isolation    # editable dev install
#   DEBUG=1 pip install .                    # debug build
#   python -m build                          # build sdist + wheel locally
#   cibuildwheel                             # cross-platform wheels in CI
#
# Environment variables honoured by the build:
#   VCPKG_ROOT          - path to vcpkg checkout (toolchain auto-loaded if set)
#   CMAKE_ARGS          - extra -D flags forwarded to every configure
#   SKBUILD_CMAKE_ARGS  - scikit-build-core's own override channel
#   DEBUG=1             - switch CMAKE_BUILD_TYPE to Debug
#   OPENSWMM_ENGINE_INSTALL_PREFIX - link against a pre-built engine instead
#                                    of building it from source (CI hot-path)
#
# Conda environments work the same as any other venv: the wheel is fully
# self-contained, dylibs/DLLs ship inside the package, and conda's libs are
# not relied on at runtime.
# ============================================================================

[build-system]
# Build-time NumPy floor matches the runtime [project].dependencies floor
# (numpy >= 1.21).  We deliberately do NOT cap below 2.0: at CMake configure
# time we materialise a patched copy of numpy's bundled Cython pxd into the
# build tree to fix an upstream bug in numpy 2.x's
# `__init__.cython-30.pxd` that references the removed `_PyArray_Descr.subarray`
# field — see python/cmake/PatchNumpyPxd.cmake.  With the patch in place,
# extensions compile against numpy 2.x and the produced wheels run on any
# numpy >= 1.21 (since we use only the numpy 1.7+ stable ABI surface).
requires = [
    "scikit-build-core >= 0.10",
    "cython >= 3.0.12",
    "numpy >= 1.21",
]
build-backend = "scikit_build_core.build"

# ============================================================================
# Project metadata  (PEP 621)
# ============================================================================
[project]
name = "openswmm"
version = "6.0.0.dev0"
description = "Python bindings for the OpenSWMM stormwater modelling engine."
requires-python = ">=3.9"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors     = [{ name = "Caleb Buahin", email = "caleb.buahin@gmail.com" }]
maintainers = [{ name = "Caleb Buahin", email = "caleb.buahin@gmail.com" }]
keywords = [
    "SWMM",
    "stormwater",
    "hydrology",
    "hydraulics",
    "water resources",
    "environmental engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy >= 1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3",
    "cython >= 3.0.12",
    "build >= 1.2",
]

[project.urls]
Homepage      = "https://github.com/hydrocouple/openswmm.engine/python"
Repository    = "https://github.com/hydrocouple/openswmm.engine"
"Bug Tracker" = "https://github.com/hydrocouple/openswmm.engine/issues"
Changelog     = "https://github.com/hydrocouple/openswmm.engine/blob/main/CHANGELOG.md"

# ============================================================================
# scikit-build-core configuration
# ============================================================================
[tool.scikit-build]
minimum-version  = "build-system.requires"
cmake.version    = ">=3.24"
cmake.build-type = "Release"
ninja.make-fallback = true

# Per-tag build directory.  Keeps editable, debug, and release wheel
# builds from clobbering each other's CMake cache and prevents the
# "stale .so picked up from previous Python ABI" class of bugs.
build-dir = "build/{wheel_tag}"

# Where the package lives on disk.  scikit-build-core copies the package
# tree AND CMake install() outputs into the wheel.
wheel.packages = ["openswmm"]

# What stays out of the binary wheel.  Cython sources and generated .c
# files are huge and never needed at runtime; .pxd headers stay so that
# downstream Cython modules can `cimport openswmm.engine`.
wheel.exclude = [
    "**/*.pyx",
    "**/*.c",
    "**/*.cxx",
    "**/__pycache__/**",
    "**/.DS_Store",
]

# Editable install:
#   - mode=redirect keeps the source tree as the import location while
#     CMake-built outputs are surfaced via a finder placed in
#     site-packages.
#   - rebuild=false is intentional.  scikit-build-core's auto-rebuild
#     mode is incompatible with build isolation: pip's ephemeral
#     build env (containing cmake/ninja) is deleted after the install
#     completes, but the auto-rebuild hook keeps trying to invoke
#     those binaries on every import — failing with
#     "/private/var/folders/.../pip-build-env-XXXX/.../cmake: No such
#     file or directory".  It's also genuinely too slow for this
#     project (entire C++ engine + 21 Cython modules per rebuild).
#
# To pick up changes to a .pyx after the initial install, just re-run:
#     pip install -e . --no-build-isolation
# (--no-build-isolation reuses the venv's cmake / ninja / cython, so
# no temporary path gets baked into build.ninja.)
editable.mode    = "redirect"
editable.rebuild = false
editable.verbose = false

# sdist: include everything needed to build from scratch on a clean
# machine, but exclude all build artefacts.
sdist.include = [
    "openswmm/**/*.pyi",
    "openswmm/**/*.pxd",
    "openswmm/legacy/**/*.c",
    "tests/data/**/*",
    "CMakePresets.json",
]
sdist.exclude = [
    "**/.idea/**",
    "**/.vscode/**",
    "**/.pytest_cache/**",
    "**/__pycache__/**",
    "_skbuild/**",
    "build/**",
    "dist/**",
    "wheelhouse/**",
    "openswmm.egg-info/**",
    "**/*.so",
    "**/*.dylib",
    "**/*.dll",
    "**/*.pyd",
    "**/.DS_Store",
]

# ----------------------------------------------------------------------------
# Conditional overrides driven by environment variables.
# if.env values are regex patterns; ".+" matches any non-empty string.
# ----------------------------------------------------------------------------

# DEBUG=1 → debug build.
[[tool.scikit-build.overrides]]
if.env.DEBUG = "1"
cmake.build-type = "Debug"

# Note: VCPKG_ROOT, OPENSWMM_ENGINE_INSTALL_PREFIX, and CMAKE_OSX_ARCHITECTURES
# are read directly by CMakeLists.txt via $ENV{}.  Pass extra CMake flags via
# the CMAKE_ARGS or SKBUILD_CMAKE_ARGS environment variables:
#
#   export CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
#   pip install -e . --no-build-isolation

# ============================================================================
# cibuildwheel  (release-wheel matrix)
# ============================================================================
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = "*-musllinux_* *-win32 *-manylinux_i686"

test-requires = ["pytest", "numpy"]
test-command  = "pytest {package}/tests/engine -v --import-mode=importlib --ignore={package}/tests/engine/test_integration.py"

[tool.cibuildwheel.linux]
before-all   = "yum install -y ninja-build libgomp || apt-get install -y ninja-build libgomp1"
before-build = "pip install ninja"
environment  = { VCPKG_ROOT = "$VCPKG_ROOT", CMAKE_ARGS = "$CMAKE_ARGS" }

[tool.cibuildwheel.macos]
# OpenMP on macOS:
#   - Apple's clang ships without libomp; we install it via Homebrew.
#   - python/CMakeLists.txt explicitly include()s the parent's
#     ../cmake/FindOpenMP.cmake, which probes BOTH Homebrew prefixes
#     (/opt/homebrew/opt/libomp on Apple Silicon, /usr/local/opt/libomp
#     on Intel) and creates OpenMP::OpenMP_C/CXX INTERFACE imports.  No
#     env-var hint is needed — the parent's FindOpenMP is the single
#     source of truth, identical to how the parent C/C++ engine wires
#     OpenMP.
#   - delocate-wheel bundles libomp.dylib INTO the produced wheel and
#     rewrites @rpath, so end users never need brew at runtime.
before-all   = "brew install ninja libomp"
before-build = "pip install delocate"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
environment  = { VCPKG_ROOT = "$VCPKG_ROOT", CMAKE_ARGS = "$CMAKE_ARGS" }

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
environment  = { VCPKG_ROOT = "$VCPKG_ROOT", CMAKE_ARGS = "$CMAKE_ARGS" }

# ============================================================================
# pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
